--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ html, body {
 
 body {
   font-family: Arial, sans-serif;
-  padding: 20px;
+  padding: 0;
   margin: 0;
   text-align: center;
   background: radial-gradient(circle at top left, #dceeff, #b3daff, #89c2ff);
@@ -40,6 +40,8 @@ body {
 
 
 #container {
+  background: inherit;
+    /* min-height: 100%; */
   width: 100vw;
   flex: 1;
   display: flex;
@@ -197,15 +199,18 @@ border-radius: 8px 8px 8px 8px;
 
 
 #footer {
-  width: 100%;
+  background: linear-gradient(90deg, #8ab6f9, #7da7f7, #6699f2);
+  color: #3e86d4;
+  font-weight: bold;
   padding: 15px 0;
-  background-color: #6a5acd;
-  color: white;
+  width: 100%;
   text-align: center;
-  font-size: 16px;
-  box-shadow: 0 -2px 5px rgba(0,0,0,0.2);
-  margin-top: auto; /* important pour pousser le footer en bas */
+  box-shadow: 0 -2px 5px rgba(0,0,0,0.15);
+  margin-top: auto;
+  box-sizing: border-box;
 }
+
+
 
 
 
